--- a/frontend/src/assets/i18n/translations/en.json
+++ b/frontend/src/assets/i18n/translations/en.json
@@ -14,6 +14,11 @@
     "predict.input.season": "Season",
     "predict.input.crop": "Crop",
     "predict.input.rainfall": "Rainfall",
+    "predict.state.label": "Select State",
+    "predict.district.label": "Select District",
+    "predict.season.label": "Select Season",
+    "predict.crop.label": "Select Crop",
+    "predict.rainfall.label": "Rainfall (mm)",
     "recommend.input.state": "State",
     "recommend.input.district": "District",
     "recommend.input.season": "Season",
@@ -24,10 +29,105 @@
     "recommend.input.nitrogen": "Nitrogen",
     "recommend.input.potassium": "Potassium",
     "recommend.input.phosphorus": "Phosphorus",
+    "recommend.state.label": "Select State",
+    "recommend.district.label": "Select District",
+    "recommend.season.label": "Select Season",
+    "recommend.nitrogen.label": "Nitrogen (mg/kg)",
+    "recommend.potassium.label": "Potassium (mg/kg)",
+    "recommend.phosphorus.label": "Phosphorus (mg/kg)",
+    "recommend.temperature.label": "Temperature (°C)",
+    "recommend.humidity.label": "Humidity (%)",
+    "recommend.rainfall.label": "Rainfall (mm)",
+    "recommend.ph.label": "pH",
     "predict.output": "Predicted Yield",
     "predict.unit": "ton/hectare",
     "recommend.output": "Recommended Crop",
-
+    "season.winter": "Winter",
+    "season.wholeyear": "Whole Year",
+    "season.summer": "Summer",
+    "season.autumn": "Autumn",
+    "season.rabi": "Rabi",
+    "season.kharif": "Kharif",
+    "crop.maize": "Maize",
+    "crop.wheat": "Wheat",
+    "crop.barley": "Barley",
+    "crop.arecanut": "Arecanut",
+    "crop.rice": "Rice",
+    "crop.banana": "Banana",
+    "crop.cashewnut": "Cashewnut",
+    "crop.coconut": "Coconut",
+    "crop.sugarcane": "Sugarcane",
+    "crop.sweetpotato": "Sweet potato",
+    "crop.tapioca": "Tapioca",
+    "crop.blackpepper": "Black pepper",
+    "crop.drychillies": "Dry chillies",
+    "crop.turmeric": "Turmeric",
+    "crop.moong": "Moong(Green Gram)",
+    "crop.urad": "Urad",
+    "crop.arhar": "Arhar/Tur",
+    "crop.groundnut": "Groundnut",
+    "crop.sunflower": "Sunflower",
+    "crop.bajra": "Bajra",
+    "crop.castorseed": "Castor seed",
+    "crop.cotton": "Cotton(lint)",
+    "crop.horsegram": "Horse-gram",
+    "crop.jowar": "Jowar",
+    "crop.korra": "Korra",
+    "crop.ragi": "Ragi",
+    "crop.gram": "Gram",
+    "crop.sesamum": "Sesamum",
+    "crop.masoor": "Masoor",
+    "crop.linseed": "Linseed",
+    "crop.safflower": "Safflower",
+    "crop.onion": "Onion",
+    "crop.rapeseed": "Rapeseed &Mustard",
+    "crop.smallmillets": "Small millets",
+    "crop.coriander": "Coriander",
+    "crop.potato": "Potato",
+    "crop.mesta": "Mesta",
+    "crop.nigerseed": "Niger seed",
+    "crop.soyabean": "Soyabean",
+    "crop.beans": "Beans & Mutter(Vegetable)",
+    "crop.bhindi": "Bhindi",
+    "crop.brinjal": "Brinjal",
+    "crop.grapes": "Grapes",
+    "crop.tomato": "Tomato",
+    "crop.cabbage": "Cabbage",
+    "crop.garlic": "Garlic",
+    "crop.cowpea": "Cowpea(Lobia)",
+    "crop.paddy": "Paddy",
+    "crop.oilseeds": "Oilseeds",
+    "crop.jute": "Jute",
+    "crop.peas": "Peas & beans(Pulses)",
+    "crop.sannhamp": "Sannhamp",
+    "crop.khesari": "Khesari",
+    "crop.moth": "Moth",
+    "crop.guarseed": "Guar Seed",
+    "crop.cardamom": "Cardamom",
+    "crop.drumstick": "Drum Stick",
+    "crop.cauliflower": "Cauliflower",
+    "recommendation.crop.chickpea": "chickpea",
+    "recommendation.crop.rice": "rice",
+    "recommendation.crop.maize": "maize",
+    "recommendation.crop.kidneybeans": "kidneybeans",
+    "recommendation.crop.pigeonpeas": "pigeonpeas",
+    "recommendation.crop.mothbeans": "mothbeans",
+    "recommendation.crop.mungbean": "mungbean",
+    "recommendation.crop.blackgram": "blackgram",
+    "recommendation.crop.lentil": "lentil",
+    "recommendation.crop.pomegranate": "pomegranate",
+    "recommendation.crop.banaan": "banaan",
+    "recommendation.crop.mango": "mango",
+    "recommendation.crop.grapes": "grapes",
+    "recommendation.crop.watermelon": "watermelon",
+    "recommendation.crop.muskmelon": "muskmelon",
+    "recommendation.crop.apple": "apple",
+    "recommendation.crop.orange": "orange",
+    "recommendation.crop.papaya": "papaya",
+    "recommendation.crop.coconut": "coconut",
+    "recommendation.crop.cotton": "cotton",
+    "recommendation.crop.jute": "jute",
+    "recommendation.crop.coffee": "coffee",
     "state.andman": "Andaman and Nicobar Islands",
     "state.andhra": "Andhra Pradesh",
     "state.arunachal": "Arunachal Pradesh",
@@ -80,7 +180,7 @@
     "arunachal.district.changlang": "Changlang",
     "arunachal.district.dibangvalley": "Dibang Valley",
     "arunachal.district.eastkameng": "East Kameng",
-    "arunaachal.district.eastsiang": "East Siang",
+    "arunachal.district.eastsiang": "East Siang",
     "arunachal.district.kurungkumey": "Kurung Kumey",
     "arunachal.district.lohit": "Lohit",
     "arunachal.district.longding": "Longding",
@@ -119,7 +219,7 @@
     "assam.district.nalbari": "Nalbari",
     "assam.district.sivasagar": "Sivasagar",
     "assam.district.sonitpur": "Sonitpur",
-    "assam.district.Tinsukia": "Tinsukia",
+    "assam.district.tinsukia": "Tinsukia",
     "assam.district.udalguri": "Udalguri",
     "bihar.district.araria": "Araria",
     "bihar.district.aurangabad": "Aurangabad",
@@ -160,32 +260,32 @@
     "bihar.district.vaishali": "Vaishali",
     "bihar.district.arwal": "Arwal",
     "chandigarh.district.chandigarh": "Chandigarh",
-    "chattisgarh.district.balod": "Balod",
-    "chattisgarh.district.balodaBazar": "Baloda Bazar",
-    "chattisgarh.district.balrampur": "Balrampur",
-    "chattisgarh.district.bastar": "Bastar",
-    "chattisgarh.district.bemetara": "Bemetara",
-    "chattisgarh.district.bijapur": "Bijapur",
-    "chattisgarh.district.bilaspur": "Bilaspur",
-    "chattisgarh.district.dantewada": "Dantewada",
-    "chattisgarh.district.dhamtari": "Dhamtari",
-    "chattisgarh.district.durg": "Durg",
-    "chattisgarh.district.gariaband": "Gariaband",
-    "chattisgarh.district.janjgirchampa": "Janjgir-Champa",
-    "chattisgarh.district.jashpur": "Jashpur",
-    "chattisgarh.district.kabirdham": "Kabirdham",
-    "chattisgarh.district.kanker": "Kanker",
-    "chattisgarh.district.kondagaon": "Kondagaon",
-    "chattisgarh.district.korba": "Korba",
-    "chattisgarh.district.korea": "Korea",
-    "chattisgarh.district.mahasamund": "Mahasamund",
-    "chattisgarh.district.mungeli": "Mungeli",
-    "chattisgarh.district.narayanpur": "Narayanpur",
-    "chattisgarh.district.raigarh": "Raigarh",
-    "chattisgarh.district.raipur": "Raipur",
-    "chattisgarh.district.rajnandgaon": "Rajnandgaon",
-    "chattisgarh.district.sarguja": "Sarguja",
-    "chattisgarh.district.sukma": "Sukma",
+    "chhattisgarh.district.balod": "Balod",
+    "chhattisgarh.district.balodaBazar": "Baloda Bazar",
+    "chhattisgarh.district.balrampur": "Balrampur",
+    "chhattisgarh.district.bastar": "Bastar",
+    "chhattisgarh.district.bemetara": "Bemetara",
+    "chhattisgarh.district.bijapur": "Bijapur",
+    "chhattisgarh.district.bilaspur": "Bilaspur",
+    "chhattisgarh.district.dantewada": "Dantewada",
+    "chhattisgarh.district.dhamtari": "Dhamtari",
+    "chhattisgarh.district.durg": "Durg",
+    "chhattisgarh.district.gariaband": "Gariaband",
+    "chhattisgarh.district.janjgirchampa": "Janjgir-Champa",
+    "chhattisgarh.district.jashpur": "Jashpur",
+    "chhattisgarh.district.kabirdham": "Kabirdham",
+    "chhattisgarh.district.kanker": "Kanker",
+    "chhattisgarh.district.kondagaon": "Kondagaon",
+    "chhattisgarh.district.korba": "Korba",
+    "chhattisgarh.district.korea": "Korea",
+    "chhattisgarh.district.mahasamund": "Mahasamund",
+    "chhattisgarh.district.mungeli": "Mungeli",
+    "chhattisgarh.district.narayanpur": "Narayanpur",
+    "chhattisgarh.district.raigarh": "Raigarh",
+    "chhattisgarh.district.raipur": "Raipur",
+    "chhattisgarh.district.rajnandgaon": "Rajnandgaon",
+    "chhattisgarh.district.sarguja": "Sarguja",
+    "chhattisgarh.district.sukma": "Sukma",
     "chhattisgarh.district.surajpur": "Surajpur",
     "dadraandnagar.district.dadra": "Dadra and Nagar Haveli",
     "goa.district.northgoa": "North Goa",
@@ -229,18 +329,18 @@
     "haryana.district.yamunanagar": "Yamunanagar",
     "haryana.district.mewat": "Mewat",
     "haryana.district.palwal": "Palwal",
-    "himachalpradesh.district.bilaspur": "Bilaspur",
-    "himachalpradesh.district.chamba": "Chamba",
-    "himachalpradesh.district.hamirpur": "Hamirpur",
-    "himachalpradesh.district.kangra": "Kangra",
-    "himachalpradesh.district.kinnaur": "Kinnaur",
-    "himachalpradesh.district.kullu": "Kullu",
-    "himachalpradesh.district.lahaulandspiti": "Lahaul and Spiti",
-    "himachalpradesh.district.mandi": "Mandi",
-    "himachalpradesh.district.shimla": "Shimla",
-    "himachalpradesh.district.sirmaur": "Sirmaur",
-    "himachalpradesh.district.solan": "Solan",
-    "himachalpradesh.district.una": "Una",
+    "himachal.district.bilaspur": "Bilaspur",
+    "himachal.district.chamba": "Chamba",
+    "himachal.district.hamirpur": "Hamirpur",
+    "himachal.district.kangra": "Kangra",
+    "himachal.district.kinnaur": "Kinnaur",
+    "himachal.district.kullu": "Kullu",
+    "himachal.district.lahaulandspiti": "Lahaul and Spiti",
+    "himachal.district.mandi": "Mandi",
+    "himachal.district.shimla": "Shimla",
+    "himachal.district.sirmaur": "Sirmaur",
+    "himachal.district.solan": "Solan",
+    "himachal.district.una": "Una",
     "jammuandkashmir.district.anantnag": "Anantnag",
     "jammuandkashmir.district.badgam": "Badgam",
     "jammuandkashmir.district.baramulla": "Baramulla",
@@ -255,14 +355,14 @@
     "jammuandkashmir.district.rajouri": "Rajouri",
     "jammuandkashmir.district.srinagar": "Srinagar",
     "jammuandkashmir.district.udhampur": "Udhampur",
-    "jharkhand.district.bandipora": "Bandipora",
-    "jharkhand.district.ganderbal": "Ganderbal",
-    "jharkhand.district.kishtwar": "Kishtwar",
-    "jharkhand.district.kulgam": "Kulgam",
-    "jharkhand.district.ramban": "Ramban",
-    "jharkhand.district.reasi": "Reasi",
-    "jharkhand.district.samba": "Samba",
-    "jharkhand.district.shopian": "Shopian",
+    "jammuandkashmir.district.bandipora": "Bandipora",
+    "jammuandkashmir.district.ganderbal": "Ganderbal",
+    "jammuandkashmir.district.kishtwar": "Kishtwar",
+    "jammuandkashmir.district.kulgam": "Kulgam",
+    "jammuandkashmir.district.ramban": "Ramban",
+    "jammuandkashmir.district.reasi": "Reasi",
+    "jammuandkashmir.district.samba": "Samba",
+    "jammuandkashmir.district.shopian": "Shopian",
     "jharkhand.district.bokaro": "Bokaro",
     "jharkhand.district.chatra": "Chatra",
     "jharkhand.district.deoghar": "Deoghar",
@@ -633,7 +733,7 @@
     "uttarakhand.district.paurigarhwal": "Pauri Garhwal",
     "uttarakhand.district.pithoragarh": "Pithoragarh",
     "uttarakhand.district.rudraprayag": "Rudra Prayag",
-    "uttarakhand.district.tehri garhwal": "Tehri Garhwal",
+    "uttarakhand.district.tehrigarhwal": "Tehri Garhwal",
     "uttarakhand.district.udhamsinghnagar": "Udham Singh Nagar",
     "uttarakhand.district.uttarkashi": "Uttarkashi",
     "westbengal.district.birbhum": "Birbhum",
