--- a/frontend/src/assets/i18n/translations/mr.json
+++ b/frontend/src/assets/i18n/translations/mr.json
@@ -14,6 +14,11 @@
     "predict.input.season": "हंगाम",
     "predict.input.crop": "पीक",
     "predict.input.rainfall": "पावसाचे प्रमाण",
+    "predict.state.label": "राज्य निवडा",
+    "predict.district.label": "जिल्हा निवडा",
+    "predict.season.label": "हंगाम निवडा",
+    "predict.crop.label": "पीक निवडा",
+    "predict.rainfall.label": "पाऊस (मिमि)",
     "recommend.input.state": "राज्य",
     "recommend.input.district": "जिल्हा",
     "recommend.input.season": "हंगाम",
@@ -24,9 +29,104 @@
     "recommend.input.nitrogen": "नायट्रोजन",
     "recommend.input.potassium": "पोटॅशियम",
     "recommend.input.phosphorus": "फॉस्फरस",
+    "recommend.state.label": "राज्य निवडा",
+    "recommend.district.label": "जिल्हा निवडा",
+    "recommend.season.label": "हंगाम निवडा",
+    "recommend.nitrogen.label": "नायट्रोजन (मिग्रॅ/किलोग्रॅ)",
+    "recommend.potassium.label": "पोटॅशियम (मिग्रॅ/किलोग्रॅ)",
+    "recommend.phosphorus.label": "फॉस्फरस (मिग्रॅ/किलोग्रॅ)",
+    "recommend.temperature.label": "तापमान (°C)",
+    "recommend.humidity.label": "आर्द्रता (%)",
+    "recommend.rainfall.label": "पाऊस (मिमि)",
     "predict.output": "पीक उत्पन्नाचा अंदाज",
     "predict.unit": "टन/हेक्टर",
     "recommend.output": "शिफारस केलेले पीक",
+    "season.winter": "हिवाळा",
+    "season.wholeyear": "सर्व वर्ष",
+    "season.summer": "उन्हाळा",
+    "season.autumn": "शरद ",
+    "season.rabi": "रबी",
+    "season.kharif": "खरीप",
+    "crop.maize": "मका",
+    "crop.wheat": "गहू",
+    "crop.barley": "बार्ली",
+    "crop.arecanut": "सुपारी",
+    "crop.rice": "तांदूळ",
+    "crop.banana": "केळी",
+    "crop.cashewnut": "काजू",
+    "crop.coconut": "नारळ",
+    "crop.sugarcane": "ऊस",
+    "crop.sweetpotato": "रताळे",
+    "crop.tapioca": "टॅपिओका",
+    "crop.blackpepper": "काळी मिरी",
+    "crop.drychillies": "सुक्या मिरच्या",
+    "crop.turmeric": "हळद",
+    "crop.moong": "मूग",
+    "crop.urad": "उडीद",
+    "crop.arhar": "तूर",
+    "crop.groundnut": "भुईमूग",
+    "crop.sunflower": "सूर्यफूल",
+    "crop.bajra": "बाजरी",
+    "crop.castorseed": "एरंडीचे बी",
+    "crop.cotton": "कापूस",
+    "crop.horsegram": "हरभरा",
+    "crop.jowar": "ज्वारी",
+    "crop.korra": "कोरा",
+    "crop.ragi": "रागी",
+    "crop.gram": "हरभरा",
+    "crop.sesamum": "तीळ",
+    "crop.masoor": "मसूर",
+    "crop.linseed": "जवस",
+    "crop.safflower": "कुसुम",
+    "crop.onion": "कांदा",
+    "crop.rapeseed": "मोहरी",
+    "crop.smallmillets": "लहान बाजरी",
+    "crop.coriander": "कोथिंबीर",
+    "crop.potato": "बटाटा",
+    "crop.mesta": "मेस्टा",
+    "crop.nigerseed": "नायजर बियाणे",
+    "crop.soyabean": "सोयाबीन",
+    "crop.beans": "वाल",
+    "crop.bhindi": "भिंडी",
+    "crop.brinjal": "वांगे",
+    "crop.grapes": "द्राक्षे",
+    "crop.tomato": "टोमॅटो",
+    "crop.cabbage": "कोबी",
+    "crop.garlic": "लसूण",
+    "crop.cowpea": "चवळी",
+    "crop.paddy": "भात",
+    "crop.oilseeds": "तेलबिया",
+    "crop.jute": "ज्यूट",
+    "crop.peas": "वटाणा",
+    "crop.sannhamp": "सॅनहॅम्प",
+    "crop.khesari": "कॆशर",
+    "crop.moth": "मटकी",
+    "crop.guarseed": "गवार",
+    "crop.cardamom": "वेलची",
+    "crop.drumstick": "शेवगा",
+    "crop.cauliflower": "फुलकोबी",
+    "recommendation.crop.chickpea": "चणे",
+    "recommendation.crop.rice": "तांदूळ",
+    "recommendation.crop.maize": "मका",
+    "recommendation.crop.kidneybeans": "राजमा",
+    "recommendation.crop.pigeonpeas": "वटाणा",
+    "recommendation.crop.mothbeans": "मटकी",
+    "recommendation.crop.mungbean": "मूग",
+    "recommendation.crop.blackgram": "काळा हरभरा",
+    "recommendation.crop.lentil": "मसूर",
+    "recommendation.crop.pomegranate": "डाळिंब",
+    "recommendation.crop.banaan": "केळी",
+    "recommendation.crop.mango": "आंबा",
+    "recommendation.crop.grapes": "द्राक्षे",
+    "recommendation.crop.watermelon": "टरबूज",
+    "recommendation.crop.muskmelon": "कस्तुरी",
+    "recommendation.crop.apple": "सफरचंद",
+    "recommendation.crop.orange": "संत्रा",
+    "recommendation.crop.papaya": "पपई",
+    "recommendation.crop.coconut": "नारळ",
+    "recommendation.crop.cotton": "कापूस",
+    "recommendation.crop.jute": "ज्यूट",
+    "recommendation.crop.coffee": "कॉफी",
     "state.andman": "अंदमान आणि निकोबार बेटे",
     "state.andhra": "आंध्र प्रदेश",
     "state.arunachal": "अरुणाचल प्रदेश",
@@ -118,7 +218,7 @@
     "assam.district.nalbari": "नालबाडी",
     "assam.district.sivasagar": "सिवासगर",
     "assam.district.sonitpur": "सोनितपुर",
-    "assam.district.Tinsukia": "टिनसुकीया",
+    "assam.district.tinsukia": "टिनसुकीया",
     "assam.district.udalguri": "उदलगुरी",
     "bihar.district.araria": "अराड़ी",
     "bihar.district.aurangabad": "औरंगाबाद",
@@ -159,32 +259,32 @@
     "bihar.district.vaishali": "वैशाली",
     "bihar.district.arwal": "अरवल",
     "chandigarh.district.chandigarh": "चंदीगढ़",
-    "chattisgarh.district.balod": "बालोद",
-    "chattisgarh.district.balodaBazar": "बालोदा बजार",
-    "chattisgarh.district.balrampur": "बाल्रामपुर",
-    "chattisgarh.district.bastar": "बास्तार",
-    "chattisgarh.district.bemetara": "बेमेतारा",
-    "chattisgarh.district.bijapur": "बिजपुर",
-    "chattisgarh.district.bilaspur": "बिलासपुर",
-    "chattisgarh.district.dantewada": "दान्तेवाडा",
-    "chattisgarh.district.dhamtari": "धामताडी",
-    "chattisgarh.district.durg": "दुर्ग",
-    "chattisgarh.district.gariaband": "गरीबांद",
-    "chattisgarh.district.janjgirchampa": "जनजगिर चम्पा",
-    "chattisgarh.district.jashpur": "जाशपुर",
-    "chattisgarh.district.kabirdham": "कबर्दम",
-    "chattisgarh.district.kanker": "कंकेर",
-    "chattisgarh.district.kondagaon": "कोंडागांव",
-    "chattisgarh.district.korba": "कोरबा",
-    "chattisgarh.district.korea": "कोरा",
-    "chattisgarh.district.mahasamund": "महासमुंद",
-    "chattisgarh.district.mungeli": "मुंगली",
-    "chattisgarh.district.narayanpur": "नारायणपुर",
-    "chattisgarh.district.raigarh": "रायगढ़",
-    "chattisgarh.district.raipur": "रायपुर",
-    "chattisgarh.district.rajnandgaon": "राजनगंज",
-    "chattisgarh.district.sarguja": "सर्ग्वाजा",
-    "chattisgarh.district.sukma": "सुक्मा",
+    "chhattisgarh.district.balod": "बालोद",
+    "chhattisgarh.district.balodaBazar": "बालोदा बजार",
+    "chhattisgarh.district.balrampur": "बाल्रामपुर",
+    "chhattisgarh.district.bastar": "बास्तार",
+    "chhattisgarh.district.bemetara": "बेमेतारा",
+    "chhattisgarh.district.bijapur": "बिजपुर",
+    "chhattisgarh.district.bilaspur": "बिलासपुर",
+    "chhattisgarh.district.dantewada": "दान्तेवाडा",
+    "chhattisgarh.district.dhamtari": "धामताडी",
+    "chhattisgarh.district.durg": "दुर्ग",
+    "chhattisgarh.district.gariaband": "गरीबांद",
+    "chhattisgarh.district.janjgirchampa": "जनजगिर चम्पा",
+    "chhattisgarh.district.jashpur": "जाशपुर",
+    "chhattisgarh.district.kabirdham": "कबर्दम",
+    "chhattisgarh.district.kanker": "कंकेर",
+    "chhattisgarh.district.kondagaon": "कोंडागांव",
+    "chhattisgarh.district.korba": "कोरबा",
+    "chhattisgarh.district.korea": "कोरा",
+    "chhattisgarh.district.mahasamund": "महासमुंद",
+    "chhattisgarh.district.mungeli": "मुंगली",
+    "chhattisgarh.district.narayanpur": "नारायणपुर",
+    "chhattisgarh.district.raigarh": "रायगढ़",
+    "chhattisgarh.district.raipur": "रायपुर",
+    "chhattisgarh.district.rajnandgaon": "राजनगंज",
+    "chhattisgarh.district.sarguja": "सर्ग्वाजा",
+    "chhattisgarh.district.sukma": "सुक्मा",
     "chhattisgarh.district.surajpur": "सुरजपुर",
     "dadraandnagar.district.dadra": "दादरा आणि नगर हवॆली",
     "goa.district.northgoa": "उत्तर गोवा",
@@ -228,18 +328,18 @@
     "haryana.district.yamunanagar": "यमुनानगर",
     "haryana.district.mewat": "मेवाट",
     "haryana.district.palwal": "पालवाल",
-    "himachalpradesh.district.bilaspur": "बिलासपुर",
-    "himachalpradesh.district.chamba": "चंबा",
-    "himachalpradesh.district.hamirpur": "हमिरपुर",
-    "himachalpradesh.district.kangra": "कंगरा",
-    "himachalpradesh.district.kinnaur": "किन्नार",
-    "himachalpradesh.district.kullu": "कुलु",
-    "himachalpradesh.district.lahaulandspiti": "लाहुल आणि स्पिती",
-    "himachalpradesh.district.mandi": "मंडी",
-    "himachalpradesh.district.shimla": "शिमला",
-    "himachalpradesh.district.sirmaur": "सिरमौर",
-    "himachalpradesh.district.solan": "सोलान",
-    "himachalpradesh.district.una": "उना",
+    "himachal.district.bilaspur": "बिलासपुर",
+    "himachal.district.chamba": "चंबा",
+    "himachal.district.hamirpur": "हमिरपुर",
+    "himachal.district.kangra": "कंगरा",
+    "himachal.district.kinnaur": "किन्नार",
+    "himachal.district.kullu": "कुलु",
+    "himachal.district.lahaulandspiti": "लाहुल आणि स्पिती",
+    "himachal.district.mandi": "मंडी",
+    "himachal.district.shimla": "शिमला",
+    "himachal.district.sirmaur": "सिरमौर",
+    "himachal.district.solan": "सोलान",
+    "himachal.district.una": "उना",
     "jammuandkashmir.district.anantnag": "अनंतनाग",
     "jammuandkashmir.district.badgam": "बडगाम",
     "jammuandkashmir.district.baramulla": "बरामुला",
@@ -254,14 +354,14 @@
     "jammuandkashmir.district.rajouri": "राजौरी",
     "jammuandkashmir.district.srinagar": "श्रीनगर",
     "jammuandkashmir.district.udhampur": "उधामपुर",
-    "jharkhand.district.bandipora": "बंदीपोरा",
-    "jharkhand.district.ganderbal": "गांदेरबाल",
-    "jharkhand.district.kishtwar": "किश्तवार",
-    "jharkhand.district.kulgam": "कुलगाम",
-    "jharkhand.district.ramban": "रामबन",
-    "jharkhand.district.reasi": "रेसी",   
-    "jharkhand.district.samba": "साम्बा",
-    "jharkhand.district.shopian": "शोपीया",
+    "jammuandkashmir.district.bandipora": "बंदीपोरा",
+    "jammuandkashmir.district.ganderbal": "गांदेरबाल",
+    "jammuandkashmir.district.kishtwar": "किश्तवार",
+    "jammuandkashmir.district.kulgam": "कुलगाम",
+    "jammuandkashmir.district.ramban": "रामबन",
+    "jammuandkashmir.district.reasi": "रेसी",   
+    "jammuandkashmir.district.samba": "साम्बा",
+    "jammuandkashmir.district.shopian": "शोपीया",
     "jharkhand.district.bokaro": "बोकरो",
     "jharkhand.district.chatra": "चटरा",
     "jharkhand.district.deoghar": "देवघर",
@@ -632,7 +732,7 @@
     "uttarakhand.district.paurigarhwal": "Pauri Garhwal",
     "uttarakhand.district.pithoragarh": "Pithoragarh",
     "uttarakhand.district.rudraprayag": "Rudra Prayag",
-    "uttarakhand.district.tehri garhwal": "Tehri Garhwal",
+    "uttarakhand.district.tehrigarhwal": "Tehri Garhwal",
     "uttarakhand.district.udhamsinghnagar": "Udham Singh Nagar",
     "uttarakhand.district.uttarkashi": "Uttarkashi",
     "westbengal.district.birbhum": "Birbhum",
